# btree_reducer

./: Cargo.toml  README.md  crates-io.md
src/: lib.rs
src/arrangement/: mod.rs
src/breducer/: api.rs  mod.rs
src/contact/: api.rs  mod.rs
src/reducer/: api.rs  mod.rs  test.rs
src/xor/: api.rs  mod.rs
